--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>Az én Oldalam</h1>
-<p>BTW Bendegúz vagyok</p>
+<h1>Az én Boltom :)</h1>
+<p>HAMAROSAN NYIT!</p>
 
 </body>
 </html>
