--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 <h1>Az én Boltom :)</h1>
 <p>HAMAROSAN NYIT!</p>
-
+  
+<a href="https://www.w3schools.com">This is a link</a>
+  
+<h1>TULAJDONOS</h1>
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+  
 </body>
 </html>
