--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <a href="https://www.w3schools.com">This is a link</a>
   
 <h1>TULAJDONOS</h1>
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+<img src="unnamed.jpg" alt="ZuuZoo" width="128" height="128">
   
 </body>
 </html>
