--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Az én Boltom :)</h1>
 <p>HAMAROSAN NYIT!</p>
   
-<a href="https://www.w3schools.com">This is a link</a>
+<a href="https://hollosibendeguz.github.io/sulis_shop/">This is a link</a>
   
 <h1>TULAJDONOS</h1>
 <img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256">
