--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <h1>Az én Boltom :)</h1>
 <p>HAMAROSAN NYIT!</p>
   
-<a href="https://hollosibendeguz.github.io/sulis_shop/">This is a link</a>
+  
+<p> </p>
+<p>Youtube</p>
+<a href="https://youtube.com/zuuzoo">This is a link</a>
   
 <h1>TULAJDONOS</h1>
 <img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256">
