--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+<style>
+  h1 {
+    color:green
+  }
+  <body>
 
 <h1>Az én Boltom :)</h1>
 <p>HAMAROSAN NYIT!</p>
