--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
-<style>
-  h1 {
-    color:green
-  }
-</style>
 <body>
 
 <h1>Az én Boltom :)</h1>
-<p>HAMAROSAN NYIT! Fagyii</p>
+<p>HAMAROSAN NYIT!</p>
   
   
 <p> </p>
