--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+  body {
+  background-color: lightblue;
+}
 
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+  
+  
 <h1>Az én Boltom :)</h1>
 <p>HAMAROSAN NYIT!</p>
   
