--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<style>
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-</style>
+<link href="style.css" rel="stylesheet">
   
   
 <h1>Az én Boltom :)</h1>
