--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://youtube.com/zuuzoo">Youtube csatornám</a>
   
 <h1>TULAJDONOS</h1>
-<img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256" style="width:50%;">
+<img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256" class="center">
   
 <h1> </h1>
 <h1>TesztElek</h1>
