--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1> </h1>
 <h1>TesztElek</h1>
 <div class="iframe-container">
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/4hUOOr_W6eM?autoplay=1" title="YouTube video player" frameborder="0" class="center" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/4hUOOr_W6eM?autoplay=1" title="YouTube video player" frameborder="0" style="width: 50%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
   
 
