--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+img {
+  border-radius: 50%;
+}
+</style>
+
 <link href="style.css" rel="stylesheet">
   
   
