--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ img {
 <a href="https://youtube.com/zuuzoo">Youtube csatornám</a>
   
 <h1>TULAJDONOS</h1>
-<img src="unnamed.jpg" alt="ZuuZoo" width="128" height="256" class="center">
+<img src="unnamed.jpg" alt="ZuuZoo" width="128" height="256">
   
 <h1> </h1>
 <h1>TesztElek</h1>
