--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ img {
   
   
 <h1>Az én Boltom :)</h1>
-<p>HAMAROSAN NYIT! FAGYIII</p>
+<h3>HAMAROSAN NYIT! FAGYIII</h3>
   
   
 <h2>TULAJDONOS</h2>
