--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ img {
   
   
 <h2>TULAJDONOS</h2>
-<img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256">
+  <a class="folio-read-more" href="https://youtube.com/zuuzoo" title="Itt tudsz frakciót pályázni">
+    <img src="unnamed.jpg" alt="ZuuZoo" width="256" height="256">
+  </a>
   
 <h1> </h1>
 <h1>TesztElek</h1>
