--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ img {
   
   
 <h1>Az én Boltom :)</h1>
-<h3>HAMAROSAN NYIT! FAGYII</h3>
+<h3>HAMAROSAN NYIT! FAGYIII</h3>
   
   
 <h2>TULAJDONOS</h2>
@@ -22,7 +22,7 @@ img {
 <h1> </h1>
 <h1>TesztElek</h1>
 <div class="iframe-container">
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/bgbfiqfrjBU?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/bgbfiqfrjBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
   
 
